total comment mabghax it9ad hhhh

--- a/template/home.html
+++ b/template/home.html
@@ -115,7 +115,7 @@
               </button>
             </div>
             <div class="reaction">
-              <span>12</span>
+              <span>{{.TotalComments}}</span>
               <input type="checkbox" class="hidd" id="commentshow-{{.Id}}" />
               <label for="commentshow-{{.Id}}" class="comment">💬</label>
               <style>
