--- a/static/home.css
+++ b/static/home.css
@@ -18,7 +18,7 @@ body::-webkit-scrollbar ,
   display: none;
 }
 body {
-  background-color: var(--joj);
+  background: #051b29;
 }
 .allPost {
   /* background-color: red; */
@@ -100,6 +100,7 @@ body {
   border-radius: 10px;
 }
 .commentaires h3 {
+  color: var(--akhdar);
   text-align: center;
   margin-bottom: 15px;
 }
@@ -200,7 +201,7 @@ body:has(#commentshow:checked) .post-time {
 
 .post-time {
   margin-bottom: 15px;
-  color: var(--wahd);
+  color: var(--akhdar);
   font-size: 15px;
 }
 
