--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,38 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+.error{
+  animation: err .8s ease-in-out;
+  padding: 0 10px;
+  width: 330px;
+  height: 50px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  border: 2px solid #f5c6cb;
+  display: flex;
+  align-items: center;
+  background-color: #f8d7da;
+  color: #721c24;
+  border-radius: 5px;
+  margin: 20px auto;
+  font-family: sans-serif;
+}
+
+.error .icon {
+  margin-right: 10px;
+  font-size: 20px;
+}
+.error .message{
+  font-size: 14px;
+}
+.error .close-btn {
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 20px;
+  margin-left: 20px;
+  color: #721c24;
+}
 body {
   display: flex;
   justify-content: center;
@@ -241,5 +273,16 @@ form {
   }
   .toggle-panel h1 {
     font-size: 30px;
+  }
+}
+@keyframes err {
+  0% {
+    opacity: 0;
+    transform: translateX(500px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
