--- a/static/navbar.css
+++ b/static/navbar.css
@@ -1,5 +1,5 @@
 :root {
-  --wahd: #6537e0;
+  --wahd: #43abb4;
   --joj: #090114;
   --tlata:#6A2FC7;
   --bg:#0a0a0a;
@@ -9,7 +9,7 @@
 }
 header {
   animation: navbar 1.5s ease-in-out;
-  background: #051b29;
+  background: #00ADB5;
   z-index: 3;
   position: fixed;
   top: 0;
@@ -19,7 +19,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 0px 1px 2px var(--wahd);
+  /* box-shadow: 0px 1px 2px var(--wahd); */
 }
 header img {
   filter: brightness(150%);
@@ -36,7 +36,7 @@ header .title {
   font-size: 45px;
   font-weight: bold;
   color: transparent;
-  -webkit-text-stroke: 2px var(--wahd);
+  -webkit-text-stroke: 2px white;
   font-family: Arial, sans-serif;
   text-decoration: none;
 }
@@ -69,6 +69,7 @@ header .title {
   text-decoration: none;
   background-color: var(--wahd);
   border-radius: 10px;
+  border: 2px solid white;
   color: white;
   font-size: 18px;
 }
