--- a/template/home.html
+++ b/template/home.html
@@ -21,6 +21,8 @@
     <div>
       {{if .Session}}
       <div class="gap">
+        <input type="checkbox" id="menu-toggle" class="hidd" />
+        <label for="menu-toggle" class="postbtn">Menu</label>
         <input type="checkbox" id="post-toggle" class="hidd" />
         <label for="post-toggle" class="postbtn">Create post</label>
         <div class="postform">
