show and hide password

--- a/static/home.css
+++ b/static/home.css
@@ -183,7 +183,7 @@ body {
 .avatar,
 .comment form img {
   filter: brightness(150%);
-  background-color: #48a6a71c;
+  background-color: #217677;
   border: 1px solid #1e1e1e6e;
   width: 32px;
   height: 32px;
