--- a/static/home.css
+++ b/static/home.css
@@ -259,24 +259,28 @@ body:has(#commentshow:checked) .post-time {
 }
 
 .post-reactions form {
-  margin-top: 40px;
   display: flex;
-  gap: 10px;
+  margin-top: 40px;
+  gap: 30px;
   align-items: center;
 }
 
 .reaction {
   display: flex;
+  gap: 2px;
   align-items: center;
+  justify-content: center;
 }
 
 .like-btn,
-.dislike-btn {
+.dislike-btn ,
+.comment-icon{
   background: transparent;
   border: none;
   cursor: pointer;
-  font-size: 1.2rem;
-  color: #ccc;
+  font-size: 18px;
+  color: white;
+  
 }
 
 .postform {
@@ -289,9 +293,7 @@ body:has(#commentshow:checked) .post-time {
   left: 50%;
   transform: translate(-50%, -50%);
   position: fixed;
-  /* border: 2px solid #0a0a0a; */
   color: white;
- 
   flex-direction: column;
   background-color: #2d3039;
   text-align: center;
@@ -303,6 +305,9 @@ body:has(#commentshow:checked) .post-time {
 }
 
 .postform form input {
+  outline: none;
+  background-color: transparent;
+  color: white;
   padding: 0 0 0 10px;
   width: 90%;
   height: 50px;
@@ -313,10 +318,13 @@ body:has(#commentshow:checked) .post-time {
 }
 
 .postform form input:focus {
-  border: 2px solid black;
+  border: 2px solid var(--wahd);
 }
 
 .postform form textarea {
+  outline: none;
+  color: white;
+  background-color: transparent;
   resize: none;
   padding: 25px 0 0 10px;
   width: 90%;
@@ -327,7 +335,7 @@ body:has(#commentshow:checked) .post-time {
 }
 
 .postform form textarea:focus {
-  border: 2px solid black;
+  border: 2px solid var(--wahd);
 }
 
 .postform form .btnform {
@@ -369,7 +377,7 @@ body:has(#post-toggle:checked) .postform {
 }
 
 body:has(#post-toggle:checked) .allPost {
-  opacity: 0.5;
+  opacity: 0.3;
 }
 
 
@@ -434,4 +442,11 @@ body:has(#post-toggle:checked) .allPost {
     opacity: 1;
     scale: 1;
   }
+}
+
+.like{
+  color: blue;
+}
+.deslike{
+  color: red;
 }
