--- a/template/home.html
+++ b/template/home.html
@@ -108,20 +108,20 @@
           <form action="/reaction" method="post">
             <div class="reaction">
               <span>{{.TotalLikes}}</span>
-              <button name="reaction" value="1" class="like-btn" type="submit">
-                <i class="fa-light fa-thumbs-up"></i>
+              <button name="reaction" value="1" class="like-btn" type="submit" >
+                <i class="fa-regular fa-thumbs-up"></i>
               </button>
             </div>
             <div class="reaction">
               <span>{{.TotalDislikes}}</span>
               <button name="reaction" value="-1" class="dislike-btn" type="submit">
-                <i class="fa-solid fa-thumbs-down"></i>
+                <i class="fa-regular fa-thumbs-down"></i>
               </button>
             </div>
             <div class="reaction">
               <span>{{.TotalComments}}</span>
               <input type="checkbox" class="hidd" id="commentshow-{{.Id}}" />
-              <label for="commentshow-{{.Id}}" class="comment"><i class="fa-regular fa-comment"></i></label>
+              <label for="commentshow-{{.Id}}" class="comment-icon"><i class="fa-regular fa-comment"></i></label>
               <style>
                 #post-{{.Id}}:has(#commentshow-{{.Id}}:checked) .second-part {
                   display: flex;
@@ -165,11 +165,11 @@
                   <form action="/CommentsLike " method="post">
                     <div class="reaction">
                       <span> {{.TotalLikes}}</span>
-                      <button name="reaction" value="1" class="like-btn" type="submit"><i class="fa-light fa-thumbs-up"></i></button>
+                      <button name="reaction" value="1" class="like-btn" type="submit"><i class="fa-regular fa-thumbs-up"></i></button>
                     </div>
                     <div class="reaction">
                       <span>{{.TotalDislikes}}</span>
-                      <button name="reaction" value="-1" class="dislike-btn" type="submit"><i class="fa-light fa-thumbs-down"></i></button>
+                      <button name="reaction" value="-1" class="dislike-btn" type="submit"><i class="fa-regular fa-thumbs-down"></i></button>
                     </div>
                     <input type="hidden" name="userId" value="{{$userId}}" />
                     <input type="hidden" name="commentID" value="{{.Id}}" />
